--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <ul>
+            <li><a href="">Home</a></li>
+        </ul>
+    </header>
+    <section style="">
+        <div>
+            <h1>Welcome to the Home Page</h1>
+            <p>This is a sample paragraph on the home page.</p>                                                                                                              
+        </div>
+    </section>
 </body>
 </html>
