--- a/index.html
+++ b/index.html
@@ -3,17 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
+<style>
+    body {
+  margin: 0;
+  padding: 0;
+}
+
+    li a {
+        text-decoration: none;
+        color: black;
+        font-weight: bold;
+          padding: 14px 16px;
+        display: block;
+    }                                                                                                                                                                                                           
+</style>
 <body>
     <header>
-        <ul>
+        <ul style="display: flex; list-style: none; gap: 20px;background-color: lightgray; margin: 0;
+  padding: 0;">
+            <li><a href="">Home</a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Home</a></li>
             <li><a href="">Home</a></li>
         </ul>
     </header>
     <section style="">
         <div>
-            <h1>Welcome to the Home Page</h1>
+            <h1 class="text-2xl font-bold font-mono">Welcome to the Home Page</h1>
             <p>This is a sample paragraph on the home page.</p>                                                                                                              
         </div>
     </section>
